# mfr24

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: python.yml
src/mfr24/: __init__.py  _version.py  cache.py  cli.py  client.py  console.py  constants.py  exceptions.py  geo.py  models.py  parse.py  transport.py
src/mfr24/api/: __init__.py  app.py
tests/: conftest.py  fakes.py  test_api.py  test_cache.py  test_cli.py  test_client.py  test_geo.py  test_models.py  test_parse.py  test_transport.py
tests/fixtures/: flight_list_p1.json  flight_list_p2.json  profile.html
