[project]
name = "mfr24"
version = "0.0.0"
description = "Unofficial Python SDK for MyFlightRadar24 flight lists"
authors = [{ name = "James Ding", email = "james@twango.dev" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["flightradar24", "myflightradar24", "fr24", "adsb", "aviation", "flights", "sdk", "scraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.15.0",
    "beautifulsoup4>=4.14",
    "airportsdata>=20260315",
    "typer>=0.26.6",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
mfr24 = "mfr24.cli:app"

[project.urls]
Homepage = "https://github.com/twangodev/mfr24"
Repository = "https://github.com/twangodev/mfr24"
Issues = "https://github.com/twangodev/mfr24/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mfr24"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "poethepoet>=0.32",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.14",
    "ty>=0.0.2",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["F", "W", "E", "I", "UP", "C4", "FA", "ISC", "ICN", "RET", "SIM", "TID", "TC", "PTH"]
ignore = ["E501", "TC001", "TC002", "TC003"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format --check ."
typecheck = "ty check"
check = ["lint", "format", "typecheck"]
lint-fix = "ruff check --fix ."
format-fix = "ruff format ."
fix = ["lint-fix", "format-fix"]
test = "pytest tests/ -v --cov=src/mfr24 --cov-report=term --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"
test-net = "pytest tests/ -v -m network"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "-m", "not slow"]
markers = [
    "slow: real network / live FR24",
    "network: hits live my.flightradar24.com",
]
